# ChangeLog for dev-ruby/acts_as_list
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*acts_as_list-0.1.4 (05 Aug 2011)

  05 Aug 2011; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.4.ebuild:
  Version bump.

*acts_as_list-0.1.3 (18 Jun 2011)

  18 Jun 2011; Hans de Graaff <graaff@gentoo.org> +acts_as_list-0.1.3.ebuild:
  Version bump.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org> acts_as_list-0.1.2.ebuild:
  Keyword ~x86-macos.

  18 Dec 2009; Hans de Graaff <graaff@gentoo.org> acts_as_list-0.1.2.ebuild:
  Fix copy-paste issues.

*acts_as_list-0.1.2 (15 Dec 2009)

  15 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  +acts_as_list-0.1.2.ebuild, +metadata.xml:
  Initial import.
