@@ -1,18 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST acts_as_list-0.1.2.gem 8192 RMD160 6617f6184982ac659b309dfea2ea6818609c117e SHA1 060828321668bd0cbce72003913fa09ab89d42bb SHA256 c47a8375d2d30f1b6553897b4565fa3bca6e7afd7ca9f2c9c031c84c7248176b
-DIST acts_as_list-0.1.3.gem 9728 RMD160 f4fcc0f41bea91b5a0a91c13527e7b4ba380ebb5 SHA1 c029d3d1744d0d89b19616d189c90dd57af36f21 SHA256 eea2e32936494445411c2ccd011be8fd85b5a22a05089571d4ba94e90781e01d
 DIST acts_as_list-0.1.4.gem 9728 RMD160 ca05c0a814da8a84fa2cf0c0bbd8b3631b2754ac SHA1 0093c8f7aa8d91e3cac15e03e0d6b32d49e5701d SHA256 173a4dfa6d2e15c86eb6a6f4da4c37e2f31b11e368a179ef2aaaf1118b9f3602
-EBUILD acts_as_list-0.1.2.ebuild 630 RMD160 1e7d3ce11043efb31d72ab8f20570c773316b892 SHA1 1c36eefbcadf88c5da5469ac2178ee2a371c290c SHA256 029f1e884055e4db9c19e7a800824426ccf594613122187c6589cee2c1f8825d
-EBUILD acts_as_list-0.1.3.ebuild 664 RMD160 6d1b54eba2e1e3d1f01ee473f66d9c1a2081c5a2 SHA1 bbc9071611f833cf091d1c70894f61e0320a5613 SHA256 d9fdc578c0e9f6764d63a2c2a4f3d92c91bd0a8daa108db103b3e6a9bb8c5cca
-EBUILD acts_as_list-0.1.4.ebuild 664 RMD160 6d1b54eba2e1e3d1f01ee473f66d9c1a2081c5a2 SHA1 bbc9071611f833cf091d1c70894f61e0320a5613 SHA256 d9fdc578c0e9f6764d63a2c2a4f3d92c91bd0a8daa108db103b3e6a9bb8c5cca
-MISC ChangeLog 734 RMD160 dd600955546ec5f6508c6f420b2f91d58a0ffe32 SHA1 96848fc382d088fe4fdc56489d41213278531ace SHA256 adeb3740697a02214babb647c75fc5663d4271009a46f8db752d662462f56b37
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk474BkACgkQiIP6VqMIqNecPgD/St23vVbMBsOHNegkqJPi1mMR
-rc6twsecLaWLGMy4rkQA+wYwxTdlBG33Pr7de+nO5PO4HERvRiynkEXLXHgmPvFI
-=efVW
+iF4EAREIAAYFAk978hEACgkQiIP6VqMIqNclfQD8CZvOMB7JZGqrkJv0JIRLN0L1
+XUL1lYXExTC0HqCETjQA/18RDkyqJpuxeZP5tyukNKRRb1IDEYFNK7P729GNRXaA
+=SQgd
 -----END PGP SIGNATURE-----
