@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/acts_as_list
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> -acts_as_list-0.1.2.ebuild,
+  -acts_as_list-0.1.3.ebuild:
+  Remove old versions.
 
 *acts_as_list-0.1.4 (05 Aug 2011)
 
